# recursive-ai

./: .gitignore  .mcp.json  FINDINGS.md  OPENCLAW.md  PROJECT.md  README.md  install-openclaw.sh  install-opencode.sh  install.sh  pyproject.toml  uninstall.sh
.github/: ISSUE_PARAMETRIC_PERSONALITY_LAYER.md  ISSUE_STRUCTURED_FACT_EXTRACTION.md  ISSUE_URL_MEMORY.md
codex/: AGENTS.md
hooks/: README.md  pre-compact-rlm-semantic.py  pre-compact-rlm.js  pre-compact-rlm.py  session-end-rlm-semantic.py  session-end-rlm.js  session-end-rlm.py  session-start-rlm.py
mcp/: server.py
opencode/: rlm-plugin.ts
rlm/: __init__.py  analyzer.py  archive.py  chunker.py  cli.py  db.py  export.py  extractor.py  facts.py  memory.py  opencode_export.py  scanner.py  scratchpad.py  semantic_tags.py  state.py  summarize.py  tui.py  url_fetcher.py
rlm/providers/: __init__.py  base.py  claude_provider.py  openai_provider.py
scripts/: export_session.py  ingest_chat_data.py
skill/: SKILL-openclaw.md  SKILL.md
test_results/: 02-security-audit-test.md  04-eval-safety-test.md  04-scale-test.md  self-referential-architecture-summary.md
test_results/recall/: 01-san-diego-recall.md  02-synopit-recall.md  03-goober-futurama-recall.md  04-iraq-war-opinions-recall.md
tests/: test_archive_opencode.py  test_cli_remember.py  test_export.py  test_facts.py  test_opencode_export.py  test_scratchpad.py  test_smart_remember.py  test_url_fetcher.py
tests/fixtures/: opencode_export_sample.json
